# Assistant-eddie

./: .env.example  .gitignore  GITHUB_UPLOAD_GUIDE.md  LICENSE  MistralTranslate.py  PREPARATION_SUMMARY.md  README.md  SCREENSHOT_GUIDE.md  VISUAL_ASSETS_SUMMARY.md  action.py  architecture.mermaid  config.py  eddie-agent.service  eddie-voice.service  mqtt-flow.mermaid  pyproject.toml  requirements.txt  test.py  tools.py  training_sp.py  translate.py  trial.py  voice.py
ActionLayer/: categories.py  clock.py  doer.py  quant1.py  timezones.py  tool1.py  tools.py
TranslationLayer/: MQTTswitchboard.py  agent.py  agent2.py  backupt.py  backuptrans.py  prompts.py  quanttest3.py  server-refactor-TL.py  topics.py  translator.py  vits.py  voicer.py  vp.py
images/: README.md
scripts/: audition_tts.py
src/eddie/: config.py  main.py
src/eddie/agent/: agent.py  agent_configs.py  conversation.py  events.py  tool_executor.py  tool_state.py  voice_routes.py
src/eddie/mqtt/: client.py
src/eddie/stt/: wakeword.py  whisper_stt.py
src/eddie/tools/: clock.py  dice.py  music.py  smart_home.py  timer.py  timezones.py  weather.py
src/eddie/tts/: voicer.py
tests/: conftest.py  test_clock.py  test_dice.py  test_timer.py  test_weather.py
